tests/neg/i20338a.check
-- [E007] Type Mismatch Error: tests/neg/i20338a.scala:10:15 -----------------------------------------------------------
10 |  test.field = "hello" // error
   |               ^^^^^^^
   |               Found:    ("hello" : String)
   |               Required: Int
   |
   | longer explanation available when compiling with `-explain`
